--- a/_posts/0000-01-02-dtails99.md
+++ b/_posts/0000-01-02-dtails99.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+What did the duck say to the doctor? You quack!
 Use the left arrow to go back!
